--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name="com.app.mohamedgomaa.arabic_books.MainActivity"/>
+        <activity android:name="com.app.mohamedgomaa.arabic_books.main.MainActivity"/>
 
 
         <activity android:name="com.app.mohamedgomaa.arabic_books.Splash_Layer">
